--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "cakephp/migrations": "^2.0.0",
         "cakephp/plugin-installer": "^1.0",
         "matthiasmullie/minify": "^1.3",
-        "mobiledetect/mobiledetectlib": "2.*"
+        "mobiledetect/mobiledetectlib": "2.*",
+        "scssphp/scssphp": "^1.0"
     },
     "require-dev": {
         "cakephp/bake": "^1.9.0",
