--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 /vendor/*
 /webroot/img/ob/*
 /webroot/css/amp.css
+/webroot/google6970c49221ffcedf.html
 
 # OS generated files #
 ######################
